# gerenciador-estudos

./: .gitignore  _version.py  icone.desktop  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  main.yml
src/assets/: icone.icns
src/gerenciador_de_estudos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gerenciador_estudos/: __init__.py  __main__.py  config.py  logic.py  widgets.py
